test: fetchDividend 메서드에 대한 모킹 추가